# Turtle-Web

./: README.md  pyproject.toml
Back-end/: docker-compose.yml  manage.py  pyproject.toml
Back-end/back_end_turtle/: asgi.py  settings.py  urls.py  wsgi.py
Back-end/docker/docker_db/: dockerfile
Back-end/docker/docker_env/: dockerfile
Back-end/turtle_project/: celerybeat-schedule
Back-end/turtle_project/apps/lesson/: apps.py  models.py
Back-end/turtle_project/apps/lesson/api/: serializers.py  urls.py  views.py
Back-end/turtle_project/apps/lesson/migrations/: 0001_initial.py
Back-end/turtle_project/apps/user/: apps.py  backends.py  consumers.py  models.py  tasks.py
Back-end/turtle_project/apps/user/api/: serializers.py  urls.py  views.py
Back-end/turtle_project/apps/user/migrations/: 0002_remove_user_first_name_remove_user_last_name_and_more.py  0003_alter_user_managers_remove_user_full_name_and_more.py  0004_alter_usersession_options_and_more.py  0005_usersession_updated_at.py  0006_alter_usersession_refresh_token.py  0007_alter_usersession_refresh_token.py  0008_user_is_email_verified_user_is_phone_verified_and_more.py  0009_remove_usersession_last_activity.py
Back-end/turtle_project/core/: asgi.py  settings.py  urls.py
